# autodos-linux

./: .gitignore  CMakeLists.txt  README.md  games.local.json.example
config/bases/: default.conf  midi-alsa-example.conf  window-opengl-hq3x.conf
docs/: SYNC_AND_UPSTREAM.md  UPSTREAM_LEGACY.md
scripts/: export_pr_games_fragment.py  sync-games-json.sh
src/: autodos.cpp  autodos.h  autodos_launch.h  launch_posix.cpp  launch_win32.cpp  main.cpp  main_cli.cpp  main_tui.cpp
